--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
         
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
+        <link rel="stylesheet" href="style.css" type="text/css" />
         <script src="chart.js"></script>
     </head>
     
@@ -26,6 +27,7 @@
             
         </div>
         
+        <div id="stocks"></div>
         <!--<div ng-repeat="tag in tags" ng-click="removeTag($index)">{{tag}}</div>-->
         
     
